[package]
name = "awsm"
edition = "2018"
version = "0.0.3"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/0.0.3/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.47"
js-sys = "0.3.24"
beach_map = "0.1.2"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
log = "0.4"
serde-wasm-bindgen = "0.1.3"

[dependencies.web-sys]
version = "0.3.24"
features = [
    # core html
    'HtmlElement',
    'Window',
    'EventTarget',
    'Location',
    'Url',

    # elements
    'HtmlImageElement',
    'HtmlCanvasElement',
    'HtmlVideoElement',

    # images
    'ImageBitmap',
    'ImageData',

    # canvas
    'CanvasRenderingContext2d',

    # core webgl
    'WebGlRenderingContext', 
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlVertexArrayObject',
    'WebGlActiveInfo',

    # webgl extensions
    'OesVertexArrayObject', 
    'AngleInstancedArrays',
]
