[package]
name = "awsm"
edition = "2018"
version = "0.0.8"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
# generic 
rustc-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
beach_map = "0.1.2"
# debugging
log = "0.4"
# wasm
wasm-bindgen = "0.2.48"
js-sys = "0.3.25"
wasm-bindgen-futures= { version = "0.3.25", features = ["futures_0_3"] }
serde-wasm-bindgen = "0.1.3"

[dependencies.web-sys]
version = "0.3.25"
features = [
    # core
    'HtmlElement',
    'Document',
    'Element',
    'Window',
    'Event',
    'EventTarget',
    'MouseEvent',
    'Location',
    'Url',
    'Blob',
    'BlobPropertyBag',

    # elements
    'HtmlImageElement',
    'HtmlCanvasElement',
    'HtmlVideoElement',

    # images
    'ImageBitmap',
    'ImageData',

    # fetch
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",

    # audio
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AudioContextOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioDestinationNode",
    "AudioBufferOptions",

    # canvas
    'CanvasRenderingContext2d',

    # core webgl
    'WebGlRenderingContext', 
    'WebGl2RenderingContext',
    'WebGlUniformLocation',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'WebGlVertexArrayObject',
    'WebGlActiveInfo',

    # webgl extensions
    'OesVertexArrayObject', 
    'AngleInstancedArrays',
]
