[package]
name = "awsm"
edition = "2018"
version = "0.0.1"
authors = ["David Komer <david.komer@gmail.com.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/0.0.1/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["awsm", "webgl", "renderer", "3d", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
futures = "0.1"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'WebGlUniformLocation',
  'WebGlBuffer',
  'CanvasRenderingContext2d',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'ImageBitmap',
  'ImageData',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'HtmlVideoElement',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
  'EventTarget'
]
