[package]
name = "awsm"
edition = "2018"
version = "0.0.1"
authors = ["David Komer <david.komer@gmail.com.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/0.0.1/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["awsm", "webgl", "renderer", "3d", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
cfg-if = "0.1"
num-traits = "0.2"
beach_map = "0.1.2"
wasm-bindgen = "0.2.45"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
js-sys = "0.3.22"
log = "0.4"

[dependencies.web-sys]
version = "0.3.22"
features = [
  'WebGlUniformLocation',
  'WebGlBuffer',
  'CanvasRenderingContext2d',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'ImageBitmap',
  'ImageData',
  'HtmlImageElement',
  'HtmlCanvasElement',
  'HtmlVideoElement',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
  'EventTarget',
  'Location',
  'Url'
]

[features]
webgl_1 = []
webgl_2 = []
