[package]
name = "awsm"
edition = "2018"
version = "0.0.2-alpha"
authors = ["David Komer <david.komer@gmail.com.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/0.0.1/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["awsm", "webgl", "renderer", "3d", "graphics", "gamedev", "web"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.46"
js-sys = "0.3.23"
cfg-if = "0.1"
beach_map = "0.1.2"
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"] }
log = "0.4"
serde-wasm-bindgen = "0.1.3"

[dependencies.web-sys]
version = "0.3.23"
features = [
    'WebGlUniformLocation',
    'WebGlBuffer',
    'ImageBitmap',
    'ImageData',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlCanvasElement',
    'HtmlVideoElement',
    'WebGlProgram',
    'WebGlShader',
    'WebGlTexture',
    'Window',
    'EventTarget',
    'Location',
    'Url',
    'WebGlVertexArrayObject',
    'WebGlActiveInfo',
    'CanvasRenderingContext2d'
]

[features]
webgl_1 = ["web-sys/WebGlRenderingContext", "web-sys/OesVertexArrayObject", "web-sys/AngleInstancedArrays"]
webgl_2 = ["web-sys/WebGl2RenderingContext"]
