[package]
name = "awsm"
edition = "2018"
version = "0.0.12"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[features]

[dependencies]
awsm_web = "0.0.1"
