[package]
name = "awsm"
edition = "2018"
version = "0.0.12"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev", "engine"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'


[dependencies]
web-sys = "0.3.25"
js-sys = "0.3.25"
wasm-bindgen = "0.2.48",
awsm_web = "0.0.1",
log = "0.4"
rustc-hash = {version = "1.0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
futures-preview = { version = "=0.3.0-alpha.16", features = ["async-await", "nightly"], optional = true}
beach_map = {version = "0.1.2", optional = true }
wasm-bindgen-futures= { version = "0.3.25", features = ["futures_0_3"], optional = true}
serde-wasm-bindgen = { version = "0.1.3", optional = true }
