[package]
name = "awsm_renderer"
edition = "2018"
version = "0.0.1"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["gltf", "webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.53"
web-sys = { version = "^0.3.27", features = ["HtmlCanvasElement"] }
js-sys = "0.3.27"
log = "0.4.8"
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
serde = { version = "1.0.99", features = ["derive"], optional = true }
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"]}
awsm_web = { path="../web", version = "0.0.11", features = ["webgl", "loaders"], default-features = false }

[dependencies.gltf]
# path = "../../../gltf"
version = "0.14"
features = ["import", "utils", "names", "extras", "names", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness"]
default-features = false 