[package]
name = "awsm_web"
edition = "2018"
version = "0.0.2"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/awsm/"
repository = "https://github.com/dakom/awsm"
homepage = "https://github.com/dakom/awsm"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[features]
default = ["data", "audio", "image", "video", "canvas", "input", "loaders", "tick", "window", "webgl"]
data = []
audio = [
    # audio
    "web-sys/AudioContext",
    "web-sys/AudioBuffer",
    "web-sys/AudioNode",
    "web-sys/AudioContextOptions",
    "web-sys/AudioBufferSourceNode",
    "web-sys/AudioBufferSourceOptions",
    "web-sys/AudioDestinationNode",
    "web-sys/AudioBufferOptions",
    'web-sys/Event',
]
image = [
    'web-sys/HtmlImageElement',
    'web-sys/ImageBitmap',
    'web-sys/ImageData',
]
video = [
    'web-sys/HtmlVideoElement',
]
canvas = [
    # canvas
    'web-sys/CanvasRenderingContext2d',
    'web-sys/HtmlCanvasElement',
]
input = [
    'web-sys/MouseEvent',
    'web-sys/Event',
    'web-sys/Element',
    'web-sys/Document',
    'web-sys/EventTarget',
]
loaders = [
    "data",
    "window",
    "web-sys/Request",
    "web-sys/RequestInit",
    "web-sys/Response",
    "web-sys/ResponseInit",
    'web-sys/Location',
    'web-sys/HtmlElement',
    'web-sys/Url',
    'web-sys/Blob',
    'web-sys/BlobPropertyBag',

    "futures-preview",
    "wasm-bindgen-futures",
]
tick = [
    "window",
]
window= [
    "web-sys/Window",
]
webgl = [
    "canvas", 
    "image",
    "video",

    # core webgl
    'web-sys/WebGlRenderingContext', 
    'web-sys/WebGl2RenderingContext',
    'web-sys/WebGlUniformLocation',
    'web-sys/WebGlBuffer',
    'web-sys/WebGlProgram',
    'web-sys/WebGlShader',
    'web-sys/WebGlTexture',
    'web-sys/WebGlVertexArrayObject',
    'web-sys/WebGlActiveInfo',

    # webgl extensions
    'web-sys/OesVertexArrayObject', 
    'web-sys/AngleInstancedArrays',

    "serde",
    "serde-wasm-bindgen",
    "beach_map",
    "rustc-hash",
]

[dependencies]
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
log = "0.4"
rustc-hash = {version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"], optional = true}
beach_map = {version = "0.1", optional = true }
wasm-bindgen-futures= { version = "0.3", features = ["futures_0_3"], optional = true}
serde-wasm-bindgen = { version = "0.1", optional = true }
