[package]
name = "integration_tests"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.43"
wasm-bindgen-futures = "0.3.20"
js-sys = "0.3.20"
futures = "0.1.26"
awsm_webgl = { path = "../../crates/webgl" }
awsm_loaders = { path = "../../crates/loaders" }

[dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3.20"
features = [
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlBuffer',
    'WebGlTexture',
    'WebGlUniformLocation',
    'HtmlCanvasElement',
    'console',
    ]
