[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path="../shared"}
wasm-bindgen = "0.2.51"
js-sys = "0.3.27"
cfg-if = "0.1.9"
log = "0.4.8"
serde = { version = "1.0.99", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wee_alloc = "0.4.5"
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
awsm_web = { path="../../../../crates/web", version = "0.0.9", features = ["webgl", "loaders"], default-features = false }

console_log = { version = "0.1.2", optional = true}
console_error_panic_hook = {version = "0.1.6", optional = true}

[features]
# TODO - remove these when we can really use dev feature (see https://users.rust-lang.org/t/dependencies-based-on-profile/32386/4)
default = ["console_log", "console_error_panic_hook"]
dev = ["console_log", "console_error_panic_hook"]
