[package]
name = "my_core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.53"
js-sys = "0.3.27"
cfg-if = "0.1.9"
log = "0.4.8"
nalgebra = "0.18.1"
float-cmp = "0.5.3"
serde = { version = "1.0.99", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
num-traits = "0.2.8"
num-derive = "0.2.5"
wee_alloc = {version = "0.4.5", optional = true}
awsm_renderer = { path="../../../../crates/renderer", version = "0.0.1"}
awsm_web = { version = "0.0.11", features = ["tick"], default-features = false }
wasm-bindgen-futures= { version = "0.3.27", features = ["futures_0_3"] }
console_log = { version = "0.1.2", optional = true}
console_error_panic_hook = {version = "0.1.6", optional = true}
web-sys = { version = "^0.3.27", features = [
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "AudioContextOptions",
    "AudioBufferSourceNode",
    "AudioBufferSourceOptions",
    "AudioDestinationNode",
    "AudioBufferOptions",
    'Event',
    'HtmlCanvasElement'
] }

[features]
# TODO - remove these when we can really use dev feature (see https://users.rust-lang.org/t/dependencies-based-on-profile/32386/4)
default = ["wee_alloc"]
dev = ["wee_alloc", "console_log", "console_error_panic_hook"]
