[package]
name = "my_demo"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
js-sys = "0.3.36"
cfg-if = "0.1.10"
log = "0.4.8"
nalgebra = "0.20.0"
float-cmp = "0.6.0"
serde = { version = "1.0.104", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
num-traits = "0.2.11"
num-derive = "0.3.0"
wee_alloc = { version = "0.4.5", optional = true }
shipyard = { git= "https://github.com/leudz/shipyard.git", features = ["proc"], default-features = false}
awsm_renderer = { path="../../../../crates/renderer", version = "0.0.1"}
awsm_web = { path="../../../../crates/web", features = ["tick"], default-features = false }
wasm-bindgen-futures= "0.4.9"
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.36", features = [ 'Event', 'HtmlCanvasElement' ] }

[features]
# TODO - remove these when we can really use dev feature (see https://users.rust-lang.org/t/dependencies-based-on-profile/32386/4)
default = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
